--- a/index.html
+++ b/index.html
@@ -8,6 +8,122 @@
 </head>
 <body>
     <h1 class="main-title">Kanban Board</h1>
+    <div class="drag-container">
+        <ul class="drag-list">
+            <!-- Backlog Column -->
+            <li class="drag-column backlog-column">
+                <span class="header">
+                    <h1>Backlog</h1>
+                </span>
+                <!-- Backlog Content -->
+                <div id="backlog-content" class="custom-scroll">
+                    <ul class="drag-item-list" id="backlog-list">
+                        <li class="drag-item">Testing</li>
+                        <li class="drag-item">Testing</li>
+                        <li class="drag-item">Testing</li>
+                        <li class="drag-item">Testing</li>
+                    </ul>
+                </div>
+                <!-- Add Button Group -->
+                <div class="add-btn-group">
+                    <div class="add-btn">
+                        <span class="plus-sign">+</span>
+                        <span>Add Item</span>
+                    </div>
+                    <div class="add-btn solid">
+                        <span>Save Item</span>
+                    </div>
+                    <div class="add-container">
+                        <div class="add-item"></div>
+                    </div>
+                </div>
+            </li>
+                 <!-- Progress Column -->
+                 <li class="drag-column progress-column">
+                    <span class="header">
+                        <h1>Progress</h1>
+                    </span>
+                    <!-- Progress Content -->
+                    <div id="progress-content" class="custom-scroll">
+                        <ul class="drag-item-list" id="progress-list">
+                            <li class="drag-item">Testing</li>
+                            <li class="drag-item">Testing</li>
+                            <li class="drag-item">Testing</li>
+                            <li class="drag-item">Testing</li>
+                        </ul>
+                    </div>
+                    <!-- Add Button Group -->
+                    <div class="add-btn-group">
+                        <div class="add-btn">
+                            <span class="plus-sign">+</span>
+                            <span>Add Item</span>
+                        </div>
+                        <div class="add-btn solid">
+                            <span>Save Item</span>
+                        </div>
+                        <div class="add-container">
+                            <div class="add-item"></div>
+                        </div>
+                    </div>
+                </li>
+                     <!-- Complete Column -->
+            <li class="drag-column complete-column">
+                <span class="header">
+                    <h1>Complete</h1>
+                </span>
+                <!-- Complete Content -->
+                <div id="complete-content" class="custom-scroll">
+                    <ul class="drag-item-list" id="complete-list">
+                        <li class="drag-item">Testing</li>
+                        <li class="drag-item">Testing</li>
+                        <li class="drag-item">Testing</li>
+                        <li class="drag-item">Testing</li>
+                    </ul>
+                </div>
+                <!-- Add Button Group -->
+                <div class="add-btn-group">
+                    <div class="add-btn">
+                        <span class="plus-sign">+</span>
+                        <span>Add Item</span>
+                    </div>
+                    <div class="add-btn solid">
+                        <span>Save Item</span>
+                    </div>
+                    <div class="add-container">
+                        <div class="add-item"></div>
+                    </div>
+                </div>
+            </li>
+                 <!-- On Hold Column -->
+                 <li class="drag-column on-hold-column">
+                    <span class="header">
+                        <h1>On Hold</h1>
+                    </span>
+                    <!-- On Hold Content -->
+                    <div id="on-hold-content" class="custom-scroll">
+                        <ul class="drag-item-list" id="on-hold-list">
+                            <li class="drag-item">Testing</li>
+                            <li class="drag-item">Testing</li>
+                            <li class="drag-item">Testing</li>
+                            <li class="drag-item">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis animi, repellat, necessitatibus velit repudiandae labore corrupti aut voluptates tenetur neque cumque ipsum placeat corporis quas non odio optio est? Accusantium. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit assumenda provident reprehenderit qui perspiciatis eveniet quos sapiente, at placeat vitae soluta, fugit laborum cupiditate fuga hic dolor quibusdam possimus totam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam veritatis officiis perspiciatis aliquam, voluptatum nobis, suscipit, adipisci quam dignissimos aspernatur nemo? Consequatur amet, aliquid consequuntur aspernatur cum ad tempora quod! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi corrupti quod molestias omnis asperiores voluptates. Modi earum labore beatae tenetur voluptas repellendus. Unde molestiae tempora cumque debitis, ad maxime doloribus? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe ducimus, facere, velit hic veniam at quidem natus soluta odit dolore voluptates consequuntur culpa accusantium! Necessitatibus culpa distinctio aspernatur totam quibusdam.</li>
+                        </ul>
+                    </div>
+                    <!-- Add Button Group -->
+                    <div class="add-btn-group">
+                        <div class="add-btn">
+                            <span class="plus-sign">+</span>
+                            <span>Add Item</span>
+                        </div>
+                        <div class="add-btn solid">
+                            <span>Save Item</span>
+                        </div>
+                        <div class="add-container">
+                            <div class="add-item"></div>
+                        </div>
+                    </div>
+                </li>
+        </ul>
+    </div>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
