added fn to updateDOM and drag and drop elements using drag and drop api

--- a/index.html
+++ b/index.html
@@ -17,12 +17,8 @@
                 </span>
                 <!-- Backlog Content -->
                 <div id="backlog-content" class="custom-scroll">
-                    <ul class="drag-item-list" id="backlog-list">
-                        <li class="drag-item">Testing</li>
-                        <li class="drag-item">Testing</li>
-                        <li class="drag-item">Testing</li>
-                        <li class="drag-item">Testing</li>
-                    </ul>
+                    <ul class="drag-item-list" id="backlog-list" ondrop="drop(event)" ondragover="allowDrop(event)"
+                    ondragenter="dragEnter(0)"></ul>
                 </div>
                 <!-- Add Button Group -->
                 <div class="add-btn-group">
@@ -45,12 +41,8 @@
                     </span>
                     <!-- Progress Content -->
                     <div id="progress-content" class="custom-scroll">
-                        <ul class="drag-item-list" id="progress-list">
-                            <li class="drag-item">Testing</li>
-                            <li class="drag-item">Testing</li>
-                            <li class="drag-item">Testing</li>
-                            <li class="drag-item">Testing</li>
-                        </ul>
+                        <ul class="drag-item-list" id="progress-list"  ondrop="drop(event)" ondragover="allowDrop(event)"
+                        ondragenter="dragEnter(1)"></ul>
                     </div>
                     <!-- Add Button Group -->
                     <div class="add-btn-group">
@@ -73,12 +65,8 @@
                 </span>
                 <!-- Complete Content -->
                 <div id="complete-content" class="custom-scroll">
-                    <ul class="drag-item-list" id="complete-list">
-                        <li class="drag-item">Testing</li>
-                        <li class="drag-item">Testing</li>
-                        <li class="drag-item">Testing</li>
-                        <li class="drag-item">Testing</li>
-                    </ul>
+                    <ul class="drag-item-list" id="complete-list"  ondrop="drop(event)" ondragover="allowDrop(event)"
+                    ondragenter="dragEnter(2)"></ul>
                 </div>
                 <!-- Add Button Group -->
                 <div class="add-btn-group">
@@ -101,12 +89,8 @@
                     </span>
                     <!-- On Hold Content -->
                     <div id="on-hold-content" class="custom-scroll">
-                        <ul class="drag-item-list" id="on-hold-list">
-                            <li class="drag-item">Testing</li>
-                            <li class="drag-item">Testing</li>
-                            <li class="drag-item">Testing</li>
-                            <li class="drag-item">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis animi, repellat, necessitatibus velit repudiandae labore corrupti aut voluptates tenetur neque cumque ipsum placeat corporis quas non odio optio est? Accusantium. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit assumenda provident reprehenderit qui perspiciatis eveniet quos sapiente, at placeat vitae soluta, fugit laborum cupiditate fuga hic dolor quibusdam possimus totam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam veritatis officiis perspiciatis aliquam, voluptatum nobis, suscipit, adipisci quam dignissimos aspernatur nemo? Consequatur amet, aliquid consequuntur aspernatur cum ad tempora quod! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi corrupti quod molestias omnis asperiores voluptates. Modi earum labore beatae tenetur voluptas repellendus. Unde molestiae tempora cumque debitis, ad maxime doloribus? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe ducimus, facere, velit hic veniam at quidem natus soluta odit dolore voluptates consequuntur culpa accusantium! Necessitatibus culpa distinctio aspernatur totam quibusdam.</li>
-                        </ul>
+                        <ul class="drag-item-list" id="on-hold-list"  ondrop="drop(event)" ondragover="allowDrop(event)"
+                        ondragenter="dragEnter(3)"></ul>
                     </div>
                     <!-- Add Button Group -->
                     <div class="add-btn-group">
